--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gbm"
 description = "High-level access to libgbm."
-version = "0.0.0"
+version = "0.1.0"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 repository = "https://github.com/Slabity/gbm-rs.git"
 license = "LGPL-3.0"
@@ -11,5 +11,5 @@ build = "build.rs"
 bindgen = "0.19.0"
 
 [dependencies]
-bitflags = "*"
-errno = "*"
+bitflags = "0.7.0"
+errno = "0.1.8"
